cabal-version:       2.4
name:                prolin
version:             0.1.0
synopsis:            Implementation of a type
homepage:            https://github.com/GU-CLASP/prolin
extra-source-files:  Exp.cf
license:             GPL-3.0-only
license-file:        LICENSE
author:              Jean-Philippe Bernardy
maintainer:          jean-philippe.bernardy@gu.se
category:            Dependent Types
build-type:          Custom

custom-setup
  setup-depends:
    base  >= 4.5,
    Cabal >= 2.4,
    directory,
    process

executable plis
  main-is:             Server.hs
  other-modules:       Exp.Lex, Exp.Par, HaskToProlin, Context, Expr, Exp.Abs Exp.ErrM Resolver TopLevel TransportationParser Types
  other-extensions:    TupleSections, ParallelListComp, CPP, MagicHash, GeneralizedNewtypeDeriving, EmptyDataDecls
   -- other-modules:       Exp.Lex, Exp.Par
  build-depends:       base >= 4.5 && < 5, transformers >= 0.3, mtl >= 2.1,
                       haskeline >= 0.7, directory >= 1.2, array >= 0.4,
                       BNFC >= 2.5, filepath >= 1.3, filepath >= 1.3, pretty-compact, containers,
                       parsek, network, network-simple
  build-depends: optparse-applicative>=0.15
  build-tool-depends:  alex:alex
  build-tool-depends:  happy:happy
  default-language:    Haskell98
  hs-source-dirs:      .
  other-modules:       Unify2, Pretty, Context, Options

executable pli
  main-is:             Main.hs
  other-modules:       Exp.Lex, Exp.Par, Context, Expr, Exp.Abs Exp.ErrM Resolver TopLevel Types
  other-extensions:    TupleSections, ParallelListComp, CPP, MagicHash, GeneralizedNewtypeDeriving, EmptyDataDecls
   -- other-modules:       Exp.Lex, Exp.Par
  build-depends:       base >= 4.5 && < 5, transformers >= 0.3, mtl >= 2.1,
                       haskeline >= 0.7, directory >= 1.2, array >= 0.4,
                       BNFC >= 2.5, filepath >= 1.3, filepath >= 1.3, pretty-compact, containers,
                       parsek, network, network-simple
  build-depends: optparse-applicative>=0.15
  build-tool-depends:  alex:alex
  build-tool-depends:  happy:happy
  default-language:    Haskell98
  hs-source-dirs:      .
  other-modules:       Unify2, Pretty, Context, Options
